# devprovas

./: .gitignore  .pyproject.toml.swp  Dockerfile  alembic.ini  efaimat_layout_text.txt  efaimat_raw_text.txt  efaimat_tables.txt  manual_endpoints_ia.md  object_aulas.txt  prompt_fase2_admin.md  pyproject.toml  readme.md  requirements.txt  test_api_sed.py  teste_ingestao.py  teste_vali.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 687223ddaf6b_create_escopo_sequencia_table.py  7271ea76b189_create_all_tables.py
app/: create_tables.py  main.py
app/admin/: __init__.py  auth.py
app/core/: database.py  security.py
app/extractors/: identificacao_extractor.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  acervo.py  aprendizagem.py  aulas.py  auth.py  bncc.py  common.py  disciplinas.py  escolas.py  materiais.py  professores.py  provas.py  questoes.py  respostas.py  turmas.py  usuarios.py
app/schemas/: academico.py  acervo.py  aprendizagem.py  auth.py  bncc.py  material.py  sed.py
app/services/: openai_client.py  sed_adapter.py
bncc/: geral_competencias.json  geral_educacao_infantil.json  geral_ensino_fundamental.json  geral_ensino_medio.json  object_aulas.txt  requirements.txt
infra/: labprovas.yaml
scripts/: EF13MAT.json  carregar_dados_sed_teste.py  create_views.py  extract_efaimat.py  extract_raw_pdf.py  import_bncc.py  import_sed_fixtures.py  importar_aprendizagens_essenciais.py  importar_escopo_sequencia.py  modelo_extracao_escopo.py  modelo_extracao_funcional.py  rebuild_db.py  suaview.sql  test_api_sed.py  test_ingest.py  testar_identificacao.py  testar_persistencia.py
sql/: schema.sql
sql/migrations/: 001_add_id_aula_to_materiais_didaticos.sql  002_reorder_materiais_didaticos_columns.sql
sql/views/: v_materiais_aprendizagens_essenciais.sql  (+2 more)
(+16 files in other folders)
