[project]
name = "devprovas"
version = "0.1.0"
description = ""
authors = [
    {name = "Adriano Rosa",email = "adrianorosa02@prof.educacao.sp.gov.br"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
