[tool.poetry]
name = "geduc"
version = "0.1.0"
description = ""
authors = ["Adriano Rosa <adrianorosa02@prof.educacao.sp.gov.br>"]
package-mode = true
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"
openai = "^1.0.0"
pgvector = "^0.4.2"
email-validator = "^2.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.34.2"
pillow = "^12.3.0"
pdfplumber = "^0.11.10"
itsdangerous = "^2.2.0"
sqladmin = "^0.29.0"
python-multipart = "^0.0.32"
starlette-session = "^0.4.3"
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
